erDiagram
    USER {
        UUID user_id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password_hash
        DECIMAL wallet_balance
        TIMESTAMP created_at
    }

    PUBLISHER {
        UUID publisher_id PK
        VARCHAR name
        VARCHAR website
        VARCHAR support_email
    }

    APP {
        UUID app_id PK
        UUID publisher_id FK
        UUID parent_app_id FK
        VARCHAR app_type
        VARCHAR title
        TEXT description
        DECIMAL price
        DATE release_date
    }

    CATEGORY {
        UUID category_id PK
        VARCHAR name
        TEXT description
    }

    APP_CATEGORY {
        UUID app_id PK,FK
        UUID category_id PK,FK
    }

    WISHLIST {
        UUID user_id PK,FK
        UUID app_id PK,FK
        TIMESTAMP added_date
    }

    ORDER {
        UUID order_id PK
        UUID user_id FK
        UUID receiver_id FK
        TIMESTAMP order_date
        DECIMAL total_amount
        VARCHAR payment_method
        VARCHAR status
    }

    ORDER_ITEM {
        UUID order_id PK,FK
        UUID app_id PK,FK
        DECIMAL price_at_purchase
    }

    USER_LIBRARY {
        UUID user_id PK,FK
        UUID app_id PK,FK
        INT playtime_hours
        TIMESTAMP added_date
    }

    REVIEW {
        UUID review_id PK
        UUID user_id FK
        UUID app_id FK
        BOOLEAN is_recommended
        INT playtime_at_review
        TEXT content
        TIMESTAMP created_at
    }

    PUBLISHER ||--o{ APP : "publishes"
    APP ||--o{ APP : "has DLC (1:N)"
    USER ||--o{ ORDER : "places"
    USER ||--o{ ORDER : "receives"
    USER ||--o{ USER_LIBRARY : "owns"
    APP ||--o{ USER_LIBRARY : "stored in"
    ORDER ||--|{ ORDER_ITEM : "contains"
    APP ||--o{ ORDER_ITEM : "included in"
    USER ||--o{ REVIEW : "writes"
    APP ||--o{ REVIEW : "receives"
    USER ||--o{ WISHLIST : "adds to"
    APP ||--o{ WISHLIST : "wished in"
    APP ||--o{ APP_CATEGORY : "classified as"
    CATEGORY ||--o{ APP_CATEGORY : "includes"